fixed accesibility on homepage -- foreground/background contrast issue

--- a/src/components/styles/home.module.scss
+++ b/src/components/styles/home.module.scss
@@ -68,10 +68,12 @@
     h2 {
         padding-top: var(--space-xxxs);
         font-size: var(--type-sm);
+        color: colors.$default;
     }
 
     p {
         margin: var(--space-xxxxs) 0;
+        color: colors.$default;
     }
 }
 
